(feat) Add select friend to invite

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -36,7 +36,7 @@
 
   </head>
 
-  <body ng-app="app">
+  <body ng-app="app" class="platform-ios platform-cordova platform-webview">
     <ion-nav-view animation="slide-left-right"></ion-nav-view>
   </body>
 
