(feat) Add PedometerService

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -18,6 +18,7 @@
     <!-- your app's js -->
     <script src="app.js"></script>
     <script src="common/services.js"></script>
+    <script src="services/pedometer.service.js"></script>
     <script src="components/startup/startup.js"></script>
     <script src="components/signup_phone/signupphone.js"></script>
     <script src="components/signup_name/signupname.js"></script>
