--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <script src="app.js"></script>
     <script src="common/services.js"></script>
     <script src="services/pedometer.service.js"></script>
+    <script src="services/d3.service.js"></script>
     <script src="components/startup/startup.js"></script>
     <script src="components/signup_phone/signupphone.js"></script>
     <script src="components/signup_name/signupname.js"></script>
