(feat) add firebase service

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -14,11 +14,14 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/bower_components/firebase/firebase.js"></script>
+    <script src="lib/bower_components/angularfire/dist/angularfire.min.js"></script>
 
     <!-- your app's js -->
     <script src="app.js"></script>
     <script src="common/services.js"></script>
     <script src="services/pedometer.service.js"></script>
+    <script src="services/firebase.service.js"></script>
     <script src="components/startup/startup.js"></script>
     <script src="components/signup_phone/signupphone.js"></script>
     <script src="components/signup_name/signupname.js"></script>
