--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
     <script src="app.js"></script>
     <script src="common/services.js"></script>
     <script src="services/pedometer.service.js"></script>
+    <script src="services/firebase.service.js"></script>
     <script src="components/startup/startup.js"></script>
     <script src="components/signup_phone/signupphone.js"></script>
     <script src="components/signup_name/signupname.js"></script>
