(feat) D3 chart added to status

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -20,6 +20,7 @@
     <script src="common/services.js"></script>
     <script src="services/pedometer.service.js"></script>
     <script src="services/d3.service.js"></script>
+    <script src="directives/directive.d3pedometer.js"></script>
     <script src="components/startup/startup.js"></script>
     <script src="components/signup_phone/signupphone.js"></script>
     <script src="components/signup_name/signupname.js"></script>
