(feat) Add new functioning directive and general clean up

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
     <script src="services/firebase.service.js"></script>
     <script src="services/d3.service.js"></script>
     <script src="directives/directive.d3pedometer.js"></script>
+    <script src="directives/directive.d3stepschartoneday.js"></script>
     <script src="components/startup/startup.js"></script>
     <script src="components/signup_phone/signupphone.js"></script>
     <script src="components/signup_name/signupname.js"></script>
